--- a/src/responsive.css
+++ b/src/responsive.css
@@ -553,9 +553,54 @@
           align-items: center;
           flex-direction: column;
      }
+
+     .twiter_sudhir_responsive {
+          width: 100% !important;
+     }
 }
 
 @media only screen and (min-width:310px) and (max-width: 540px) {
+     .ed_pop_sec2txt span {
+          display: block !important;
+          font-size: 8px;
+     }
+
+     .vccpmium_span span {
+          right: 0;
+     }
+
+     .twitter_img img {
+          width: 100%;
+          height: 399px;
+     }
+
+     .vcctv_txt h2 {
+          width: auto;
+          font-size: 2.8vw;
+     }
+
+     .vcctv_txt p {
+          color: #222222;
+          font-size: 12px;
+     }
+
+     .vcctv_txt span {
+          color: #888888;
+          font-size: 8px;
+     }
+
+     .stes_crd_info p {
+          width: auto;
+          margin-top: 2px;
+          font-size: 2.9vw;
+          margin-bottom: 0px;
+     }
+
+     .stes_crd_info span {
+          font-size: 1.5vw;
+     }
+
+
      .responsive_nav_list {
           text-align: left;
      }
