--- a/src/responsive.css
+++ b/src/responsive.css
@@ -276,6 +276,12 @@
 }
 
 @media only screen and (min-width:310px) and (max-width: 768px) {
+     .manufact_info h5 {
+          color: #096FFA;
+          margin-bottom: 11px;
+          margin-top: 10px;
+     }
+
      .subscribe_btn_desk {
           display: none;
      }
@@ -353,10 +359,15 @@
 
      .responsive_nav_list {
           display: block;
-          margin-top: 37px;
+          margin-top: 5px;
           /* height: 306px; */
-          border: 1px solid #ffffff;
           text-align: center;
+          border: 1px solid #dcdcdc2e;
+          border-radius: 14px;
+     }
+
+     .down_nav_ {
+          border-bottom: 1px solid #e3e3e330;
      }
 
      .respon_nav_link_sub {
@@ -383,18 +394,37 @@
           display: flex;
           align-items: center;
           justify-content: space-between;
+          padding: 0px 22px;
      }
 
      .navbar_ {
           height: auto;
           padding-bottom: 15px;
           padding-top: 15px;
+          position: fixed;
+          width: 100%;
+          z-index: 8;
+          background-color: white;
+          top: 0%;
+          box-shadow: 0px 5px 10px #00000014;
+
      }
+
+     .nav_res_big_container {
+          margin-right: 0 !important;
+          margin-left: 0 !important;
+     }
+
+     .manufact_banner {
+          margin-top: 80px;
+     }
+
 
      .ham_icon {
           display: inline-block;
           font-size: larger;
           padding-right: 15px;
+          color: black;
      }
 
      .manfact_crd p {
@@ -597,6 +627,11 @@
      .twiter_sudhir_responsive {
           width: 100% !important;
      }
+
+     .slidr_text {
+          font-size: 16px;
+          width: 98%;
+     }
 }
 
 @media only screen and (min-width:310px) and (max-width: 540px) {
@@ -606,7 +641,7 @@
      }
 
      .vccpmium_span span {
-          right: 0;
+          right: 0 !important;
      }
 
      .twitter_img img {
@@ -690,9 +725,9 @@
           /* flex-direction: column; */
      }
 
-     .res_ed_pop_line span {
-          display: none;
-     }
+     /* .res_ed_pop_line span { */
+     /* display: none; */
+     /* } */
 
      .responsive_big_container {
           margin-left: 40px;
@@ -702,7 +737,7 @@
      .manfact_crd {
           width: 100%;
           /* margin: 0 auto; */
-          text-align: center;
+          text-align: left;
      }
 
      .respons_premium {
