--- a/src/scroll.css
+++ b/src/scroll.css
@@ -55,3 +55,18 @@
      border-radius: 100%;
      color: white;
 }
+
+.slidr_primum {
+     position: relative;
+}
+
+.slidr_primum span {
+     position: absolute;
+     bottom: 10px;
+     right: 6px;
+     font-size: 10px;
+     color: white;
+     background: transparent linear-gradient(90deg, #FE8C00 0%, #F83600 100%);
+     padding: 2px 2px !important;
+     font-weight: 600;
+}
