--- a/src/responsive.css
+++ b/src/responsive.css
@@ -365,19 +365,16 @@
           text-align: center;
           border: 1px solid #dcdcdc2e;
           border-radius: 14px;
-          animation: myfirst 5s 2;
-          animation-direction: normal;
+          animation: myfirst linear 1s forwards;
      }
 
      @keyframes myfirst {
           0% {
-               left: 0px;
-               top: 0px;
+               opacity: 0;
           }
 
           100% {
-               right: 0px;
-               top: 0px;
+               opacity: 1;
           }
      }
 
@@ -637,6 +634,15 @@
 
      .swiper-button-prev:after {
           display: none;
+     }
+
+     .fot_nav li {
+          font-size: 2vw;
+     }
+
+     .fot_nav2 li {
+          font-size: 2vw;
+          padding: 0px 5px;
      }
 
 }
