--- a/src/scroll.css
+++ b/src/scroll.css
@@ -31,8 +31,9 @@
 .slidr_text {
      font-size: 16px;
      width: 100%;
-     white-space: nowrap;
-     /* width: 50px; */
+     display: -webkit-box;
+     -webkit-line-clamp: 2;
+     -webkit-box-orient: vertical;
      overflow: hidden;
      text-overflow: ellipsis;
 }
