--- a/src/App.css
+++ b/src/App.css
@@ -435,6 +435,14 @@
 
 
 /*//////////////////MAin card\\\\\\\\\\\\\\  */
+.mergers_respons_display {
+  display: none !important;
+}
+
+.mergers_desk_display {
+  display: block !important;
+}
+
 .main_crds_box {
   padding: 5px;
   background: #FAFAFA;
@@ -458,7 +466,7 @@
 } */
 
 /*//////////////VCCPREMIUM\\\\\\\\\\\\\\  */
-.kalupri::before {
+/* .kalupri::before {
   content: "";
   background: linear-gradient(to left, #000000 -1%, rgba(255, 255, 255, 0) 85%);
   position: absolute;
@@ -467,7 +475,7 @@
   height: 301px;
   z-index: 22;
   border-radius: 14px;
-}
+} */
 
 .vccpremium {
   background-color: black;
