--- a/src/responsive.css
+++ b/src/responsive.css
@@ -833,6 +833,12 @@
 }
 
 @media only screen and (min-width:310px) and (max-width: 540px) {
+     .vcctv_tv iframe {
+          border-radius: 14px;
+          width: 100%;
+          height: 154px;
+     }
+
      .active_nav_list {
           color: #F83900;
      }
