--- a/src/responsive.css
+++ b/src/responsive.css
@@ -634,6 +634,7 @@
      .main_crds_box {
           margin-bottom: 15px;
           width: auto;
+          padding: 10px;
      }
 
      .main_crd_res_head h2 {
