--- a/src/responsive.css
+++ b/src/responsive.css
@@ -1,4 +1,8 @@
 @media only screen and (min-width: 1251px) and (max-width: 1440px) {
+     .manfact_crd_img span {
+          right: 52px;
+     }
+
      .manfact_crd {
           width: 30%;
      }
@@ -75,6 +79,12 @@
      .slidr_author {
           font-size: 10px !important;
           color: #939393;
+     }
+
+     .evnts_txt {
+          /* width: 175px; */
+          padding-left: 5px;
+          font-size: 13px;
      }
 }
 
@@ -237,7 +247,13 @@
      }
 
      .swiper-slide {
-          width: 330px !important;
+          width: 265px !important;
+     }
+
+     .evnts_txt {
+          /* width: 175px; */
+          padding-left: 5px;
+          font-size: 13px;
      }
 }
 
@@ -279,7 +295,13 @@
      }
 
      .swiper-slide {
-          width: 330px !important;
+          width: 270px !important;
+     }
+
+     .evnts_txt {
+          /* width: 175px; */
+          padding-left: 5px;
+          font-size: 13px;
      }
 }
 
@@ -451,6 +473,8 @@
 
      .txt_cntr {
           text-align: center;
+          box-shadow: 0px 5px 10px #00000014;
+          padding: 8px 0px;
      }
 
      .flt_rgt {
@@ -517,7 +541,7 @@
           font-size: 25px;
           padding-right: 15px;
           color: black;
-          padding-top: 6px;
+          padding-top: 2px;
      }
 
      .manfact_crd p {
@@ -833,6 +857,16 @@
           margin: 30px 0px;
      }
 
+     .vccpmium_span span {
+          right: 10% !important;
+     }
+
+     .vccprim_had h2 {
+          color: white;
+          margin-top: 0px;
+          font-size: 3.5vw;
+     }
+
 }
 
 @media only screen and (min-width:310px) and (max-width: 540px) {
@@ -852,7 +886,7 @@
      }
 
      .vccpmium_span span {
-          right: 0 !important;
+          right: 15px !important;
      }
 
      .twitter_img img {
@@ -913,6 +947,8 @@
 
      .txt_cntr {
           text-align: center;
+          box-shadow: 0px 5px 10px #00000014;
+          padding: 8px 0px;
      }
 
      .flt_rgt {
@@ -1003,11 +1039,15 @@
 
 
 @media only screen and (min-width:310px) and (max-width: 420px) {
-     .maincard_col {
+     /* .maincard_col {
           width: 260px;
           margin: 0 auto;
-     }
+     } */
 
+     /* .kalupri {
+          width: 260px;
+          margin: 0 auto;
+     } */
 }
 
 
