--- a/src/scroll.css
+++ b/src/scroll.css
@@ -65,7 +65,7 @@
      position: relative;
 }
 
-.slidr_primum span {
+/* .slidr_primum span {
      position: absolute;
      bottom: 10px;
      right: 6px;
@@ -74,7 +74,7 @@
      background: transparent linear-gradient(90deg, #FE8C00 0%, #F83600 100%);
      padding: 2px 2px !important;
      font-weight: 600;
-}
+} */
 
 .swiper-container {
      width: 480px;
