--- a/src/responsive.css
+++ b/src/responsive.css
@@ -358,6 +358,17 @@
 }
 
 @media only screen and (min-width:310px) and (max-width: 768px) {
+     .prm_tag_chn {
+          left: 110px;
+          padding: 1px 1px;
+          top: 85px;
+          /* right: 0%; */
+     }
+
+     .edtor_pop_img_sec2 {
+          min-width: 166px;
+     }
+
      .manufact_info h5 {
           color: #096FFA;
           margin-bottom: 11px;
@@ -552,7 +563,7 @@
      .manfact_crd span {
           color: #798692;
           padding: 5px 2px;
-          font-size: 1.5vw;
+          font-size: 2vw;
      }
 
      .input_txt {
@@ -639,12 +650,12 @@
      }
 
      .manufact_resinfo p {
-          font-size: 2.2vw;
+          font-size: 2.5vw;
           text-align: justify;
      }
 
      .manufact_resinfo span {
-          font-size: 1.5vw;
+          font-size: 2.2vw;
      }
 
      .flex_drct_clum {
@@ -936,6 +947,7 @@
 
      .imageswidth img {
           width: 150px;
+          height: 93px;
      }
 
      .stes_crd_info p {
@@ -1008,7 +1020,7 @@
      }
 
      .manfact_crd p {
-          font-size: 2.5vw;
+          font-size: 2.7vw;
           width: 100%;
           margin: 0px;
      }
