--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,24 @@ a {
   color: black;
 }
 
+.shwNme {
+  display: none;
+}
+
+.plusONE:hover {
+  cursor: pointer;
+}
+
+.plusONE:hover+.shwNme {
+  display: block !important;
+  position: absolute;
+  background: #fff;
+  bottom: 33px;
+  right: 33px;
+  padding: 8px 8px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
 .rltiv {
   position: relative;
 }
@@ -239,6 +257,10 @@ a {
 .manufact_info span {
   color: #798692;
   padding: 5px 5px;
+  font-size: 12px;
+  color: #798692;
+  font-weight: 600;
+  padding: 0px 4px;
 }
 
 /* .dot {
@@ -301,9 +323,11 @@ a {
 }
 
 .mnfact_crd_info_respon span {
-  color: #798692;
-  padding: 5px 2px;
   font-size: 12px;
+  color: #798692;
+  font-size: 10px;
+  font-weight: 600;
+  padding: 0px 4px;
 }
 
 .second_ad {
@@ -347,8 +371,10 @@ a {
 }
 
 .ed_pop_span {
-  font-size: 12px;
   color: #798692;
+  font-size: 10px;
+  font-weight: 600;
+  padding: 0px 4px;
 }
 
 .ed_pop_sec2 {
@@ -393,8 +419,10 @@ a {
 }
 
 .ed_pop_sec2txt span {
-  font-size: 12px;
   color: #798692;
+  font-size: 10px;
+  font-weight: 600;
+  padding: 0px 4px;
 }
 
 .ed_pop_ad {
@@ -530,7 +558,7 @@ a {
   background: #FAFAFA;
   border: 1px solid #EDEDED;
   width: 80%;
-  height: 250px;
+  height: 260px;
 }
 
 /* .maincard_col::before {
@@ -613,7 +641,9 @@ a {
 
 .vccpremium_img_txt span {
   color: #888888;
-  font-size: 12px;
+  font-size: 10px;
+  font-weight: 600;
+  padding: 0px 4px;
 }
 
 
@@ -733,6 +763,9 @@ a {
 .stes_crd_info span {
   color: #798692;
   font-size: 12px;
+
+  font-weight: 600;
+  padding: 0px 4px;
 }
 
 .stes_crd_info p {
