--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,29 @@ a {
   color: black;
 }
 
+.loader {
+  border: 16px solid #F3F3F3;
+  border-radius: 50%;
+  border-top: 16px solid #3498DB;
+  width: 40px;
+  height: 40px;
+  -webkit-animation: spin 10s linear infinite;
+  animation: spin 10s linear infinite;
+  margin: 50px 0px 0px 50px;
+  text-align: center;
+  margin: 15px auto;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 .shwNme {
   display: none;
 }
