--- a/src/responsive.css
+++ b/src/responsive.css
@@ -788,6 +788,10 @@
 }
 
 @media only screen and (min-width:310px) and (max-width: 768px) {
+     .loader {
+          margin: 70px auto;
+     }
+
      .vcc_tv_hed {
           margin-top: 0px;
           margin-bottom: 32px;
