--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,21 @@
   text-align: center;
 }
 
+* {
+  padding: 0px;
+  margin: 0px;
+}
+
+.wi {
+  width: 50%;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0px;
+  margin: 0;
+}
+
 .skeleton_smhead {
   color: transparent !important;
   /* background-color: hsl(0, 0%, 94%) !important; */
@@ -176,8 +191,10 @@ a {
 }
 
 .big_container {
-  margin-left: 142px;
-  margin-right: 142px;
+  /* margin-left: 142px;
+  margin-right: 142px; */
+  margin: 0 auto;
+  width: 100%;
 }
 
 .d-flex {
@@ -185,7 +202,7 @@ a {
 
 }
 
-.align_cntr {
+.align_item {
   align-items: center;
 }
 
@@ -209,14 +226,18 @@ a {
 
 /*////////////// NavBar Start \\\\\\\\\\\\\\\\\  */
 .navbar_ {
-  height: 130px;
+  height: 119px;
   padding-bottom: 0px;
-  padding-top: 35px;
+  padding-top: 15px;
 }
 
 .navbar_shadow {
   /* box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px; */
   box-shadow: 0px 2px 4px #0000001A;
+  position: sticky;
+  top: 0;
+  z-index: 996;
+  background: white;
 }
 
 /* .d-flex {
@@ -238,12 +259,16 @@ a {
   list-style-type: none;
   /* align-items: center; */
   padding: 0px;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
 }
 
 .nav_link_list {
   padding: 8px 15px;
   color: black;
   text-decoration: none;
+  font-size: 14px;
+  font-weight: 600;
 }
 
 .down_nav_ {
@@ -252,9 +277,10 @@ a {
 
 .down_nav_list {
   padding: 9px 14px;
-  font-size: 16px;
+  font-size: 14px;
   color: black;
   text-decoration: none;
+  font-weight: 600;
 }
 
 
@@ -264,6 +290,11 @@ a {
   /* height: 150px; */
   margin-top: 35px;
   padding: 8px 5px;
+}
+
+.adverstisment_size {
+  margin: 0 auto;
+  width: 970px;
 }
 
 .advertiser h5 {
@@ -277,8 +308,8 @@ a {
 }
 
 .manufacture_bigimg {
-  max-width: 100%;
-  height: 350px;
+  width: 100%;
+  height: 330px;
 }
 
 .manufact_banner {
@@ -286,22 +317,62 @@ a {
 }
 
 .manufact_info {
-  width: 50%;
+  width: 49%;
 }
 
-.manufact_info h5 {
+.manufact_info h2 {
   color: #096FFA;
-  margin-bottom: 11px;
+  margin-bottom: 10px;
+  font-size: 14px;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 1.4px;
+  margin-top: 0px;
 }
 
 .manufact_info h1 {
-  margin-top: 5px;
+  margin-top: 0px;
   margin-bottom: 5px;
+  font-size: 32px;
+  font-weight: 600;
+  letter-spacing: -.64px;
+  line-height: 40px;
+  margin-bottom: 14px;
 }
 
 .manufact_info p {
   color: #222222;
   font-size: 16px;
+  font-weight: 400;
+  line-height: 27px;
+  margin-bottom: 14px;
+}
+
+.manufact_authordate {
+  display: flex;
+  align-items: center;
+  font-size: 12px;
+  color: #798692;
+  font-weight: 500;
+  position: relative;
+}
+
+.manufact_authordate::after {
+  content: "";
+  width: 6px;
+  height: 6px;
+  background: #b5b5b5;
+  float: right;
+  border-radius: 10px;
+  margin: 0 8px;
+}
+
+.manufact_author {
+  align-items: center;
+  font-size: 12px;
+  color: #798692;
+  font-weight: 500;
+  position: relative;
 }
 
 .manufact_info span {
@@ -335,11 +406,12 @@ a {
 
 .manufact-sm-card {
   margin-top: 35px;
+  gap: 22px;
 }
 
-.manfact_crd {
+/* .manfact_crd {
   width: 24%;
-}
+} */
 
 .manfact_crd_box {
   width: 90%;
@@ -347,6 +419,10 @@ a {
 
 .manfact_crd_img {
   position: relative;
+}
+
+.manufact_respimg {
+  margin-bottom: 10px;
 }
 
 /* .manfact_crd_img span {
@@ -363,18 +439,21 @@ a {
 
 .mnfact_crd_info_respon h5 {
   color: #096FFA;
-  margin-top: 5px;
-  margin-bottom: 8px;
+  margin-top: 0px;
+  margin-bottom: 7px;
 }
 
 .mnfact_crd_info_respon p {
-  font-size: 15px;
-  width: 88%;
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  margin-bottom: 9px;
+  margin-top: 0px;
 }
 
 .mnfact_crd_info_respon span {
@@ -390,8 +469,14 @@ a {
 }
 
 /* ///////////// Editor and Popular \\\\\\\\\\\\\\\\\\\ */
-.ed_pop {
+/* .ed_pop {
   width: 33%;
+} */
+.edpophead {
+  font-size: 22px;
+  font-weight: 700;
+  margin-bottom: 25px;
+  line-height: 22px;
 }
 
 .ed_pop_img {
@@ -413,7 +498,7 @@ a {
 
 .ed_pop_head {
   margin-top: 8px;
-  margin-bottom: 10px;
+  margin-bottom: 7px;
   font-size: 12px;
   color: #096FFA;
 }
@@ -423,6 +508,10 @@ a {
   font-weight: 500;
   width: 25vw;
   word-spacing: 1px;
+  font-weight: 500;
+  line-height: 24px;
+  margin-bottom: 9px;
+  margin-top: 0px;
 }
 
 .ed_pop_span {
@@ -433,8 +522,8 @@ a {
 }
 
 .ed_pop_sec2 {
-  margin-top: 39px;
-  padding-top: 18px;
+  /* margin-top: 39px; */
+  /* padding-top: 18px; */
   margin-bottom: 38px;
   border-right: 1px solid #E3E3E3;
   padding-right: 25px;
@@ -443,7 +532,8 @@ a {
 .ed_pop_line {
   padding-bottom: 12px;
   border-bottom: 1px solid #E3E3E3;
-  padding-top: 12px;
+  /* padding-top: 12px; */
+  margin-bottom: 12px;
 }
 
 .ed_pop_line2 {
@@ -471,6 +561,8 @@ a {
   margin-bottom: 5px;
   font-size: 14px;
   width: 278px;
+  letter-spacing: -.28px;
+  line-height: 20px;
 }
 
 .ed_pop_sec2txt span {
@@ -511,6 +603,7 @@ a {
   padding: 25px 25px;
   border-radius: 14px;
   margin-top: 35px;
+  box-sizing: border-box;
 }
 
 .vcc_tv_hed {
@@ -536,17 +629,26 @@ a {
 .vcctv_txt h5 {
   color: #096FFA;
   font-size: 12px;
+  margin-bottom: 10px;
+  text-transform: uppercase;
+  letter-spacing: 1.2px;
 }
 
 .vcctv_txt h2 {
   color: #222222;
   font-size: 24px;
-  width: 430px;
+  font-weight: 700;
+  line-height: 32px;
+  margin-bottom: 9px;
 }
 
 .vcctv_txt p {
   color: #222222;
   /* font-size: 14px; */
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 22px;
+  margin-bottom: 14px;
 }
 
 .vcctv_txt span {
@@ -609,11 +711,11 @@ a {
 }
 
 .main_crds_box {
-  padding: 15px;
-  background: #FAFAFA;
+  padding: 0px 18px 0px 0px;
+  /* background: #FAFAFA;
   border: 1px solid #EDEDED;
-  width: 80%;
-  height: 260px;
+  width: 80%; */
+  /* height: 260px; */
 }
 
 /* .maincard_col::before {
@@ -647,6 +749,7 @@ a {
   background-color: black;
   padding: 28px 5px;
   margin-top: 40px;
+  margin-bottom: 40px;
 }
 
 .vccpri_img {
@@ -688,23 +791,22 @@ a {
 .vccpremium_img_txt p {
   color: black;
   display: -webkit-box;
-  -webkit-line-clamp: 3;
+  -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
+  margin-bottom: 20px;
 }
 
-.vccpremium_img_txt span {
-  color: #888888;
-  font-size: 10px;
-  font-weight: 600;
-  padding: 0px 4px;
-}
 
+
+.Upevent_heading {
+  margin-bottom: 25px;
+}
 
 .evnts_blocks {
   border: 1px solid black;
-  padding: 4px 4px;
+  padding: 10px;
   box-shadow: -2px 5px 10px #0000000D;
   border: 1px solid #0000001A;
   border-radius: 12px;
@@ -721,12 +823,22 @@ a {
 
 .evnts_txt h4 {
   margin-top: 0px;
+  font-size: 18px;
+  font-weight: 600;
+  /* color: var(--black-color); */
+  /* line-height: 20px; */
+  margin-bottom: 6px;
+  letter-spacing: 0;
+  height: 60px;
+  overflow: hidden;
   margin-bottom: 5px;
 }
 
 .evnts_txt p {
   margin-top: 0px;
   margin-bottom: 0px;
+  font-size: 12px;
+  color: #333;
 }
 
 /* .upevent_shdows::before {
@@ -786,8 +898,17 @@ a {
 }
 
 /* //////////////////// Stories card \\\\\\\\\\\\\\\\\ */
-.imageswidth {
+/* .imageswidth {
   max-width: 250px;
+} */
+.imageswidth img {
+  height: 129px;
+  width: 210px;
+  object-fit: cover;
+}
+
+.stres_heading {
+  margin-top: 40px;
 }
 
 .flt-lft {
@@ -815,13 +936,6 @@ a {
   color: #096FFA;
 }
 
-.stes_crd_info span {
-  color: #798692;
-  font-size: 12px;
-
-  font-weight: 600;
-  padding: 0px 4px;
-}
 
 .stes_crd_info p {
   font-size: 18px;
@@ -838,7 +952,7 @@ a {
 .footer {
   background-color: #000000;
   color: white;
-  padding: 40px 0px 35px 0px;
+  padding: 20px 0px 25px 0px;
   margin-top: 30px;
 }
 
@@ -870,7 +984,9 @@ a {
 }
 
 
-
+.line_brder {
+  margin: 28px auto 30px auto !important;
+}
 
 
 
