--- a/src/App.css
+++ b/src/App.css
@@ -317,6 +317,10 @@ a {
   border-radius: 14px;
 }
 
+.manfact_crd.responsive_manfact_crd {
+  position: relative;
+}
+
 .manufacture_bigimg {
   width: 100%;
   height: 330px;
@@ -455,15 +459,16 @@ a {
 
 .mnfact_crd_info_respon p {
   display: -webkit-box;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
-  text-overflow: ellipsis;
   font-size: 16px;
   font-weight: 500;
   line-height: 24px;
   margin-bottom: 9px;
   margin-top: 0px;
+}
+
+.mnfact_crd_ul {
+  position: absolute;
+  bottom: -10px;
 }
 
 .mnfact_crd_info_respon span {
