--- a/src/responsive.css
+++ b/src/responsive.css
@@ -27,6 +27,12 @@
           margin: 0 auto;
           width: 970px;
      }
+
+     .mnfact_crd_ul {
+          position: absolute;
+          bottom: -10px;
+
+     }
 }
 
 @media screen and (min-width: 992px) and (max-width:1200px) {
@@ -77,6 +83,12 @@
           margin-bottom: 10px;
           margin-top: 10px;
           width: 23vw;
+     }
+
+     .mnfact_crd_ul {
+          position: absolute;
+          bottom: -10px;
+
      }
 }
 
@@ -198,6 +210,12 @@
      .fot_nav {
           flex-wrap: wrap;
           gap: 5px;
+     }
+
+     .mnfact_crd_ul {
+          position: absolute;
+          bottom: -14px;
+
      }
 }
 
@@ -526,6 +544,11 @@
           width: 100%;
      }
 
+     .mnfact_crd_ul {
+          position: absolute;
+          bottom: -14px;
+
+     }
 
 }
 
@@ -552,6 +575,7 @@
      .manfact_crd.responsive_manfact_crd {
           width: 100%;
           margin: 20px 0px;
+          border-bottom: 1px solid #e3e3e3;
      }
 
      .manufact-sm-card {
@@ -594,6 +618,11 @@
           font-size: 12px;
           line-height: 16px;
           width: 100%;
+          display: -webkit-box;
+          -webkit-line-clamp: 2;
+          -webkit-box-orient: vertical;
+          overflow: hidden;
+          text-overflow: ellipsis;
      }
 
      .manufact_author {
@@ -1013,5 +1042,10 @@
           border-bottom-right-radius: 25px;
           border-bottom-left-radius: 25px;
           padding: 0px 8px;
+     }
+
+     .mnfact_crd_ul {
+          position: unset;
+          bottom: 0px;
      }
 }
